--- a/src/shared/components/Modal.css
+++ b/src/shared/components/Modal.css
@@ -15,6 +15,30 @@
   background: #2a006e;
   color: white;
 }
+.modal__header h2 {
+  margin: 2.5rem;
+}
+
+.modal_content {
+  padding: 1rem 0.5rem;
+}
+
+.modal_footer {
+  padding: 1rem 0.5rem;
+}
+
+@media (min-width: 769px) {
+  .modal {
+    left: calc(50% - 20rem);
+    width: 40rem;
+  }
+}
+
+.modal-enter {
+  transform: translateY(10rem);
+  opacity: 1;
+  transition: all 200ms;
+}
 
 .modal-exit {
   transform: translateY(0);
